# VoteApp

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/databases/: __init__.py  database.py
app/models/: __init__.py  choice_model.py  event_model.py  users.py  users_model.py  vote_model.py
app/routes/: __init__.py  deps.py  event_route.py  health_route.py  users_route.py
app/schemas/: __init__.py  auth_schema.py  event_schema.py  feedback_schema.py  users_scema.py
app/services/: __init__.py  event_service.py  users_service.py
app/utils/: __init__.py  auth_utils.py
